# florian-jackisch.github.io

./: .gitignore  Gemfile  LICENSE  README.md  _config.yml  all.md  apple.md  banana.md  bank.md  carrot.md  dragonfruit.md  eggplant.md  fliegerhalle.md  friedhof.md  hbk.md  hohetorwall.md  index.html  index.md  kreuzung.md  parkplatz.md  pho_ta.md  pin.css  pin.js  skaterpark.md  soldekk.md  turm.md
_includes/: apple_map.html  apple_map_link.html  banana_map_link.html  bank_map.html  carrot_map_link.html  dragonfruit_map.html  friedhof_map.html  hbk_map.html  head.html  header.html  hohetorwall_map.html  kreuzung_map.html  parkplatz_map.html  pho_ta_map.html  pin.html  skaterpark_map.html  soldekk_map.html  turm_map.html  turm_map_link.html
bday/: agile-antelope.md  all_the_links.md  finish.md  playful-penguin.md  rugged-rhinoceros.md  tiny-turtle.md  yawning-yak.md
bday-tools/: next_target.py  pyproject.toml  qrcodes.py
bday/bday/: foo.md
qrcodes/: all_qr_codes.tex
