[tool.poetry]
name = "bday-tools"
version = "0.1.0"
description = ""
authors = ["Florian Jackisch <florian.jackisch@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bday_tools"}]

[tool.poetry.dependencies]
python = "^3.10"
segno = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
