[tool.poetry]
name = "bday-tools"
version = "0.1.0"
description = ""
authors = ["Florian Jackisch <florian.jackisch@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
segno = "^1.6.0"
playwright = "^1.52.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
